Chart details draft (#4)
* Add logo

* Refactor out structs

* Data layer context-awareness

* Mod

* Data layer improvements

* Progress

* Progress

* Progress

* Figured the time format shorter

* Statuses colors

* Sticky URL

* Calculate some diffs inside

* Separate checks

* Scrap gofmt

* Skip custom test in GH

* Shows some colorful diff

--- a/pkg/dashboard/static/styles.css
+++ b/pkg/dashboard/static/styles.css
@@ -1,3 +1,11 @@
-#charts .card {
+#charts .card, #sectionDetails .row > div {
     cursor: pointer;
+}
+
+.bg-primary .text-muted {
+    color: white!important;
+}
+
+.d2h-file-header {
+    display: none;
 }
