Enhancement/show chart icon and description (#70)
* New API to fetch chart.yaml for an installec chart

* Show icon and description for installed chart list

Co-authored-by: Harshit Mehta <harshitm@nvidia.com>

--- a/pkg/dashboard/static/styles.css
+++ b/pkg/dashboard/static/styles.css
@@ -162,6 +162,10 @@ span.link {
     background-size: 3rem;
 }
 
+#installedList .rel-name div {
+    overflow: hidden;
+}
+
 #installedList .rel-name span {
     font-family: Roboto Slab, sans-serif;
     font-weight: 700;
